# add-pyproject

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
add_pyproject/: __about__.py  __init__.py  __main__.py
tests/: test_add_pyproject.py
