[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "add-pyproject"
dynamic = ["version"]
description = 'CLI to add python dependencies to pyproject.toml'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Keto D. Zhang", email = "ketozhang@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "tomlkit",
]

[project.urls]
Documentation = "https://github.com/ketozhang/add-pyproject#readme"
Issues = "https://github.com/ketozhang/add-pyproject/issues"
Source = "https://github.com/ketozhang/add-pyproject"

[project.scripts]
add = "add_pyproject.cli:add_pyproject"

[tool.hatch.version]
path = "add_pyproject/__about__.py"

[tool.black]
target-version = ["py37"]
skip-string-normalization = true
